# flatter-gtk

./: AUTHORS  Makefile.am  README  TODO.tasks  configure  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile.am  common.cpp  common.h  controller.cpp  controller.h  drawable.cpp  drawable.h  flatter-cli-main.cpp  flatter-gtk-main.cpp  gl-canvas.cpp  gl-canvas.h  gl-tools.cpp  gl-tools.h  gl-view.cpp  gl-view.h  gl-view.ui  gtk_flatdoc.ui  he-mesh.cpp  he-mesh.h  image-export-dialog.cpp  image-export-dialog.h  interface.cpp  interface.h  mds-solver-interface.cpp  mds-solver-interface.h  mds-solver.cpp  mds-solver.h  mmp-common.h  mmp-eventpoint.cpp  mmp-eventpoint.h  mmp-geodesics.cpp  mmp-geodesics.h  mmp-measure-cli-main.cpp  mmp-propagation-observer.ui  mmp-queue.cpp  mmp-queue.h  mmp-trim_ac.cpp  mmp-trim_ac.h  mmp-utilities.cpp  mmp-utilities.h  (+38 more)
src/utk/: cache.h  geometry.h  inertial.h  io.h  math.h  matn.h  quaternion.h  ray.h  vecn.h
