dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(flatter-gtk, 0.1)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_PROG_CXX








PKG_CHECK_MODULES(GTK_FLATTER, [gtkmm-2.4 >= 2.12 gtkglextmm-1.2 cairomm-1.0 gl glu])




AC_OUTPUT([
Makefile
src/Makefile
])
